added H2 to index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <h1>Intro To Nigeria</h1>
 
+    <h2>Nigeria is a great counrty</h2>
+
     <p>
         Nigeria, <a href="https://www.britannica.com/topic/nation-state" target="_blank">country</a> located on the western coast of Africa. Nigeria has a diverse geography, with climates ranging from arid to humid equatorial. However, Nigeria's most diverse feature is its people. Hundreds of languages are spoken in the country, including Yoruba, Igbo, Fula, Hausa, Edo, Ibibio, Tiv, and English. The country has abundant natural resources, notably large deposits of petroleum and natural gas.
     </p>
